# JSim

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  JSim.json  QUICKSTART.md  README.md  RELEASE_SUMMARY.md  VERSIONING.md  index.html  restructure.ps1
.github/workflows/: ci.yml  deploy-mkdocs.yml  deploy.yml  release.yml
api/javadocs/: allclasses-index.html  allpackages-index.html  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  search.html  type-search-index.js
api_usage/: index.html
apps/sim-runtime/: main_loop.py  robot_loader.py  sensor_pipeline.py  telemetry_schema.py  wpilib_bridge.py
apps/tests/: test_apps.py
apps/viewer-plugin/: camera.py  overlays.py  renderer.py  timeline.py
architecture/: index.html
cad-import/: FIELD_RECREATION_GUIDE.md  PHYSICS_ENGINE.md  __init__.py  advantagescope_integration.py  arena_state.py  cpp_physics_bridge.py  examples.py  exporter.py  field_2024_definition.py  field_2025_andymark_definition.py  field_definitions.py  field_setup_examples.py  physics_engine.py  physics_examples.py  robot_physics.py  tests.py
core/jni/: math_jni.cpp
core/physics-core/: CMakeLists.txt
docs/: index.md
docs/content/: drivetrain_mechanism_dynamics.md
drivetrain_mechanism_dynamics/: index.html
examples/cpp/: modular_bodies_demo.cpp  robot_assembly_demo.cpp
examples/java/: ShooterPredictionExample.java
getting_started/: index.html
jsim/api/: GamePieceState.java  GamePieceType.java  GamepieceZone.java  SimRobot.java
jsim/core/: FieldConfig.java  StateManager.java
jsim/examples/: FlywheelPredictionExample.java  ShooterSubsystem.java
mkdocs/: github-workflows.md  mkdocs.yml  sitecustomize.py
mkdocs/docs/: aerodynamics.md  api_usage.md  architecture.md  collision_impulses.md  drivetrain_mechanism_dynamics.md  getting_started.md  index.md  integrators.md  magnus.md  math_index.md  matrix.md  physics_reference.md  quaternion.md  units_and_conventions.md  vector.md
scripts/: build.sh  run-tests.sh
search/: search_index.json
vendordep/: JSim.json  README.md  build.gradle  config.gradle  publish.gradle
(+1321 files in other folders)
